# LAMMPS_wrapper

./: CMakeLists.txt  INPUT  README.md  calculator.c  config.c  config.h  input.c  input.h  main.c  neb.c  neb.h  utils.c  utils.h
src/: CMakeLists.txt  calculator.c  calculator.h  config.c  config.h  input.c  input.h  main.c  neb.c  target.c  target.h  utils.c  utils.h
